# stmachine

./: CHANGELOG.md  LICENSE  README.md  cabal.project  stmachine.cabal
PAB/: Main.hs
src/: Clients.hs  Main.hs  RPS.hs  Trace.hs
test/: Spec.hs
test/Spec/: Trace.hs
