
name:                stmachine

version:             0.1.0.0

license:             BSD3


license-file:        LICENSE

author:              Paul


maintainer:          pavel.zarubin@metalamp.io


build-type:          Simple


extra-source-files:  CHANGELOG.md

cabal-version:       >=1.10


library
  exposed-modules:      RPS
  build-depends:         base >=4.14.1.0
                      , aeson
                      , bytestring
                      , containers
                      , plutus-contract
                      , playground-common
                      , text
                      , plutus-tx
                      , plutus-ledger
                      , plutus-ledger-constraints
                      , plutus-ledger-api
                      , plutus-tx-plugin
                      , freer-extras
                      , data-default
                      , plutus-use-cases
                      , prettyprinter
                      , lens
                      , openapi3
                      , serialise
                      , req
                      , plutus-pab

  hs-source-dirs:      src

  default-language:    Haskell2010
  ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise

executable stmachine
  main-is:             Main.hs

  build-depends:       base >=4.14 && <4.15

  hs-source-dirs:      src

  default-language:    Haskell2010

executable PAB
  main-is:      Main.hs     
  other-modules:       

  -- other-extensions:
  build-depends:        base >=4.14.1.0
                      , aeson
                      , bytestring
                      , containers
                      , plutus-contract
                      , playground-common
                      , text
                      , plutus-tx
                      , plutus-ledger
                      , plutus-ledger-constraints
                      , plutus-ledger-api
                      , plutus-tx-plugin
                      , freer-extras
                      , data-default
                      , plutus-use-cases
                      , prettyprinter
                      , lens
                      , stmachine
                      , plutus-pab
                      , freer-simple
                      , openapi3
                      , req

  hs-source-dirs:      PAB
  default-language:    Haskell2010
